tests/predicates-declared/predicates-declared.exp
sanity-conditional.js:5
  5: declare function foo(x: string): mixed %checks(x = "1");
                                                      ^ Unexpected token =

sanity-fall-through.js:12
 12:   return 1;
              ^ number. This type is incompatible with the expected return type of
  8: function foo(s: Array<string>): string {
                                     ^^^^^^ string

sanity-invalid-calls.js:10
 10:   if ((1)(s)) {
           ^^^^^^ function call. Function cannot be called on
 10:   if ((1)(s)) {
            ^ number

sanity-invalid-calls.js:14
 14:   if ((pred + 1)("s")) {
           ^^^^^^^^^^^^^^^ function call. Function cannot be called on
 14:   if ((pred + 1)("s")) {
            ^^^^^^^^ number

sanity-invalid-calls.js:14
 14:   if ((pred + 1)("s")) {
            ^^^^ function type. This type cannot be added to
 14:   if ((pred + 1)("s")) {
                   ^ number

sanity-is-string-bug.js:13
 13:     return x.join();    // error: both string and Array<string> can flow to x
                  ^^^^ property `join`. Property not found in
 13:     return x.join();    // error: both string and Array<string> can flow to x
                ^ String

sanity-parameter-mismatch.js:10
 10: foo(3, 3);
     ^^^^^^^^^ function call
 10: foo(3, 3);
            ^ number. This type is incompatible with
  7:   types: string | Array<string>
              ^^^^^^^^^^^^^^^^^^^^^^ union: string | array type
  Member 1:
    7:   types: string | Array<string>
                ^^^^^^ string
  Error:
   10: foo(3, 3);
              ^ number. This type is incompatible with
    7:   types: string | Array<string>
                ^^^^^^ string
  Member 2:
    7:   types: string | Array<string>
                         ^^^^^^^^^^^^^ array type
  Error:
   10: foo(3, 3);
              ^ number. This type is incompatible with
    7:   types: string | Array<string>
                         ^^^^^^^^^^^^^ array type

sanity-pred-with-body.js:6
  6: function pred(x: mixed): boolean %checks(typeof x === "string") { // error: cannot use pred type here
                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot declare predicate when a function body is present.

sanity-return-type.js:3
  3: declare function f2(x: mixed): string %checks(Array.isArray(x));
                                    ^^^^^^ string. This type is incompatible with
boolean


Found 9 errors
